[package]
name = "engine2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
hyper = { version = "0.14", features = ["full"]}
#hyper = { version = "0.14", default-features = false, features = ["client", "server"] }
hyper-rustls = "0.23.0"
futures-util = "0.3.21"
futures = "0.3.21"
http = "0.2"
log = { version = "0.4.4", optional = true }
rustls-native-certs = { version = "0.6", optional = true }
rustls = { version = "0.20.1", default-features = false }
tokio-rustls = { version = "0.23", default-features = false }
webpki-roots = { version = "0.22", optional = true }
rustls-pemfile = "1.0.0"
pin-project = "1.0.10"
tower = { version = "0.4.12", features = ["full"] }
tower-layer = "0.3.1"
tower-service = "0.3.1"
futures-core = "0.3.21"
sysinfo = "0.23.12"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
http-body = "0.4.5"
bytes = "1.1.0"
dashmap = "5.3.3"
lazy_static = "1.4.0"
clap = { version = "3.1", features = ["derive"] }